<?xml version="1.0"?>
<package format="2">
  <name>ros-w</name>
  <version>0.1.0</version>
  <description>zmq wrh homework</description>

  <maintainer email="zhangmingqi318@gmail.com">zmq wrh</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
       <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
